third_party/move/move-compiler-v2/tests/checking-lang-v2.2/lambda/bug_16336.move
module 0x42::Test {
    fun f() {
        let x : ||(||) = || {||{}};
        *(&mut x) = x();
    }
}
